--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -19,6 +19,7 @@
     a:hover {
         cursor: pointer;
     }
+
     .btn-sm {
         border-radius: unset;
     }
@@ -71,7 +72,7 @@
     /*header line style and border*/
     .header {
         color: #2c2c2c;
-        padding: 4px 12px;
+        padding: 15px 20px;
         font-size: 16px;
         font-weight: bold;
         text-transform: uppercase;
@@ -89,13 +90,13 @@
     .header-content {
         color: #666;
         background-color: transparent;
-        padding: 8px 12px;
+        padding: 8px 15px;
         margin: 15px 0px;
     }
 
     .question-row {
-        border-bottom: solid 1px #ccc;
-        padding: 10px;
+        border-bottom: solid 1px #E4E4E4;
+        padding: 10px 0px;
         overflow-y: auto;
     }
 
@@ -106,6 +107,7 @@
     .question-list {
         height: 70vh;
         overflow-y: auto;
+        padding: 10px 0px;
     }
 
     .question-detail {
@@ -167,15 +169,16 @@
     .border-left {
         border-left: solid 1px #E4E4E4;
     }
+    .border-bottom {
+        border-bottom: solid 1px #E4E4E4;
+    }
+
 </style>
 
 <div class="row">
-    <div class="col-md-12 no-padding">
-        <div class="left-menu col-xs-3 menu-collapse">
-            <div class="header"><span>Topic</span></div>
-            <div id="category-treeview-div">
-
-            </div>
+    <div class="col-sm-12 no-padding border-bottom">
+        <div class="left-menu col-xs-3 menu-collapse" style="padding: 23px 20px">
+            <a href="javascript:void(0)" class="btn btn-primary btn-flat" onclick="showFrequentlyAskedSubjects();">Frequently Asked Subjects</a>
         </div>
         <div class="col-xs-9 no-padding border-left">
             <div class="header-content col-sm-12">
@@ -183,17 +186,30 @@
                     <a class="btn btn-success btn-flat" href="/KnowledgeBase/Create">
                         <i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp; New solution
                     </a>
-                    <a href="javascript:void(0)" class="btn btn-primary btn-flat" onclick="showFrequentlyAskedSubjects();">Frequently Asked Subjects</a>
-                    <a class="btn btn-warning btn-flat" id="delete-solutions" href="javascript:void(0)"><i class="fa fa-trash"></i></a>
+                    &nbsp;&nbsp;
+                    <a class="btn btn-warning btn-flat" id="delete-solutions" href="javascript:void(0)"><i class="fa fa-trash"></i>&nbsp;&nbsp; Delete</a>
                 </div>
-                <div class="box-tools col-md-4 col-xs-3 no-padding" style="text-align: right">
+                <div class="col-md-4 col-xs-3 no-padding" style="text-align: right">
                     <div class="has-feedback">
                         <input type="text" id="key_search" class="form-control input" placeholder="Search solution..." />
                         <span class="glyphicon glyphicon-search form-control-feedback"></span>
                     </div>
                 </div>
             </div>
-            <div class="box box-solid questions">
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12 no-padding">
+        <div class="left-menu col-xs-3 menu-collapse">
+            <div class="header"><span>Categories</span></div>
+            <div id="category-treeview-div">
+
+            </div>
+        </div>
+        <div class="col-xs-9 no-padding border-left">
+            <div class="questions">
                 <div class="question-list col-md-12">
                 </div>
             </div>
@@ -428,7 +444,7 @@
                                 })[0].outerHTML
                             })[0].outerHTML;
                             var createdTime = $("<p/>", {
-                                "html": '<i class="fa fa-calendar"></i>&nbsp;Created time: ' + formatDateTime(new Date(parseInt(data.data[i].CreatedTime.substr(6))))
+                                "html": '<i class="fa fa-calendar"></i>&nbsp;Created time: ' + data.data[i].CreatedTimeString
                             })[0].outerHTML;
                             var solutionContent = $("<p/>", {
                                 "html": content + '<a href="/FAQ/Detail/' + data.data[i].Path + '">...Continue Reading</a>'
@@ -443,7 +459,7 @@
                                                {
                                                    "class": "question-header col-lg-10",
                                                    "html": checkbox + '&nbsp;&nbsp;' + subject
-                                               })[0].outerHTML + buttons + 
+                                               })[0].outerHTML + buttons +
                                                $("<div/>",
                                                {
                                                    "class": "question-detail col-sm-12",
