--- a/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
@@ -128,7 +128,7 @@
                                 }
                             </p>
                             <p>
-                                <span class="text-orange text-bold"><i class="fa fa-clock-o"></i>&nbsp; Deadline: </span><span class="text-red text-bold">@ticket.ScheduleEndTime</span> 
+                                <span class="text-orange text-bold"><i class="fa fa-clock-o"></i>&nbsp; Deadline: </span><span class="text-red text-bold">@ticket.DueByDate</span> 
                             </p>
                         </div>
                     }
