--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
@@ -292,16 +292,16 @@
             @foreach (var item in Model.Rules)
                 {
                 <text>
-            if ('@item.ParentId' == id) {
+            if ('@item.ParentId' === id) {
                 var createdId = tree.jstree().create_node(parentNode, { "data": {
-                    Logic: '@item.Logic',
-                    LogicText: '@item.LogicText',
-                    Criteria: '@item.Criteria',
-                    CriteriaText: '@item.CriteriaText',
-                    Condition: '@item.Condition',
-                    ConditionText: '@item.ConditionText',
-                    Value: '@item.Value',
-                    ValueMask: '@item.ValueMask'
+                    Logic: "@item.Logic",
+                    LogicText: "@item.LogicText",
+                    Criteria: "@item.Criteria",
+                    CriteriaText: "@item.CriteriaText",
+                    Condition: "@item.Condition",
+                    ConditionText: "@item.ConditionText",
+                    Value: "@Html.Raw(HttpUtility.JavaScriptStringEncode(item.Value))",
+                    ValueMask: "@Html.Raw(HttpUtility.JavaScriptStringEncode(item.ValueMask))"
                 }}, "last");
                 addChildRule(createdId, @item.Id);
             }
