--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -178,7 +178,7 @@
 <div class="row">
     <div class="col-sm-12 no-padding border-bottom">
         <div class="left-menu col-xs-3 menu-collapse" style="padding: 23px 20px">
-            <a href="javascript:void(0)" class="btn btn-primary btn-flat" onclick="showFrequentlyAskedTickets();">Frequently Asked Subjects</a>
+            <a href="javascript:void(0)" class="btn btn-primary btn-flat" onclick="showFrequentlyAskedTickets();">10 Frequently Asked Tickets</a>
         </div>
         <div class="col-xs-9 no-padding border-left">
             <div class="header-content col-sm-12">
